2003-09-26  Corinna Vinschen  <corinna@vinschen.de>

	* include/winuser.h (FLASHWINFO, PFLASHWINFO): Define for 98/Me, too.

2003-09-25  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/version.def (LIBRARY): Quote name.

2003-09-25  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h (GetClipboardSequenceNumber): Add functions
	and constants.

	* include/winuser.h (GetGuiResources, GR_GDIOBJECTS,
	GR_USEROBJECTS): Add functions and constants.

	* include/winuser.h (GetMouseMovePointsEx, GMMP_USE_DISPLAY_POINTS,
	GMMP_USE_HIGH_RESOLUTION_POINTS): Add functions and constants.

	* include/winuser.h (InSendMessageEx, ISMEX_NOSEND, ISMEX_CALLBACK,
	ISMEX_NOTIFY, ISMEX_REPLIED, ISMEX_SEND): Add functions and
	constants.

	* lib/user32.def (GetClipboardSequenceNumber, GetGuiResources,
	GetMouseMovePointsEx, InSendMessageEx): Add functions.

2003-09-25  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h (BroadcastSystemMessage, BroadcastSystemMessageA,
	BroadcastSystemMessageW, BroadcastSystemMessageEx,
	BroadcastSystemMessageExA, BroadcastSystemMessageExW,
	BSMINFO, BSF_ALLOWSFW, BSF_SENDNOTIFYMESSAGE, BSF_LUID,
	BSF_RETURNHDESK): Add functions and constants.

	* include/winuser.h (EnumDisplaySettingsEx, EnumDisplaySettingsExA,
	EnumDisplaySettingsExW, EDS_RAWMODE): Add functions and constant.

	* include/winuser.h (IsGUIThread, IsHungAppWindow, FlashWindowEx,
	GetProcessDefaultLayout, SetProcessDefaultLayout,
	RealChildWindowFromPoint, SetProcessDefaultLayout,
	SwitchToThisWindow): Add functions.

	* lib/user32.def (BroadcastSystemMessageA, BroadcastSystemMessageW,
	BroadcastSystemMessageExA, BroadcastSystemMessageExW,
	EnumDisplaySettingsExA, EnumDisplaySettingsExW, FlashWindowEx,
	GetProcessDefaultLayout, IsGUIThread, IsHungAppWindow,
	RealChildWindowFromPoint, SetProcessDefaultLayout,
	SwitchToThisWindow): Add function.

2003-09-25  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>
